10/23/25  added new changes for shape -> TEXT,LINE,RECTANGLE,ELLIPSE,RHOMBUS